--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ title: "[css-jokes] ->"
 ---
 
 <h1>{{page.title | escape}}</h1>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<link rel="stylesheet" href="css/site.css">
 
 <ol class="push-0">
   {% for joke in site.data.jokes %}
